--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "14.0",
-    "axios": "^1.6.8",
+    "axios": "^0.27.2",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.24.1"
   }
 }
